--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/earntask
+MONGODB_URI=mongodb://atlas-sql-69985aa68c1e4930ca0cfa02-8pwfku.a.query.mongodb.net/sample_mflix?ssl=true&authSource=admin
 JWT_SECRET=earntask-dev-secret-change-in-production
 JWT_EXPIRES_IN=7d
 ADMIN_EMAIL=admin@earntask.com
