--- a/server/.env.example
+++ b/server/.env.example
@@ -10,6 +10,8 @@ REFERRAL_BONUS=10
 MIN_WITHDRAWAL=100
 NODE_ENV=development
 
+# Production: your app URL (for CORS). Example: https://earntask.com
+# CLIENT_URL=https://your-domain.com
 
 # Rate limit: max requests per window (default: 1000 in dev, 200 in prod)
 # RATE_LIMIT_MAX=1000
