--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
+    "build": "cd ../client && npm ci && npm run build",
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
     "seed:admin": "node src/scripts/seedAdmin.js"
