--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "cd ../client && npm ci && npm run build",
+    "build:server": "npm ci",
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
     "seed:admin": "node src/scripts/seedAdmin.js"
