--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "build": "cd ../client && npm ci && npm run build",
+    "build": "mkdir -p public && cd ../client && npm ci && npm run build",
     "build:server": "npm ci",
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
