--- a/server/.env.example
+++ b/server/.env.example
@@ -1,25 +1,43 @@
+# Copy to .env and fill in values. On Render, set these in Dashboard → Environment.
+
 PORT=5000
+NODE_ENV=development
+
+# Required: MongoDB (use MongoDB Atlas for production/Render)
 MONGODB_URI=mongodb://localhost:27017/earntask
+
+# Required: JWT signing (use a long random string in production, e.g. openssl rand -hex 32)
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_EXPIRES_IN=7d
+
+# Required on Render: your app URL for CORS (no trailing slash)
+CLIENT_URL=http://localhost:5173
+# Production (Render): CLIENT_URL=https://client-earn.onrender.com
+
+# Admin user (for seed script and login)
 ADMIN_EMAIL=admin@earntask.com
 ADMIN_PASSWORD=Admin@123
+
+# App config
 SIGNUP_BONUS=10
 TASK_REWARD=10
 REFERRAL_BONUS=10
 MIN_WITHDRAWAL=100
-NODE_ENV=development
 
-# Production: your app URL (for CORS). Example: https://earntask.com
-# CLIENT_URL=https://your-domain.com
-
-# Rate limit: max requests per window (default: 1000 in dev, 200 in prod)
-# RATE_LIMIT_MAX=1000
+# Rate limit (optional; defaults: 200/15min in prod, 1000 in dev)
+# RATE_LIMIT_MAX=200
 # RATE_LIMIT_WINDOW_MS=900000
 
-# Optional: Email for OTP (use Mailtrap or SendGrid in production)
+# Optional: Email for OTP (Mailtrap or SendGrid in production)
 SMTP_HOST=
 SMTP_PORT=587
 SMTP_USER=
 SMTP_PASS=
 FROM_EMAIL=noreply@earntask.com
+
+# --- Production / Render (set these in Render Dashboard → Environment) ---
+# NODE_ENV=production
+# CLIENT_URL=https://client-earn.onrender.com
+# JWT_SECRET=<generate with: openssl rand -hex 32>
+# MONGODB_URI=mongodb+srv://USERNAME:PASSWORD@cluster0.xxxxx.mongodb.net/earntask?retryWrites=true&w=majority
+# (Atlas: use "Connect" → "Drivers" / "Connect your application" and replace USERNAME, PASSWORD, cluster host, DB name. Must include credentials.)
