--- a/server/.env.example
+++ b/server/.env.example
@@ -38,6 +38,7 @@ FROM_EMAIL=noreply@earntask.com
 # --- Production / Render (set these in Render Dashboard → Environment) ---
 # NODE_ENV=production
 # CLIENT_URL=https://client-earn.onrender.com
+# API_ONLY=true   (set when deploying server separately from client; server will not serve static files)
 # JWT_SECRET=<generate with: openssl rand -hex 32>
 # MONGODB_URI=mongodb+srv://USERNAME:PASSWORD@cluster0.xxxxx.mongodb.net/earntask?retryWrites=true&w=majority
 # (Atlas: use "Connect" → "Drivers" / "Connect your application" and replace USERNAME, PASSWORD, cluster host, DB name. Must include credentials.)
