--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
-    "build:standalone": "VITE_BUILD_STANDALONE=1 npx vite build",
+    "build": "node node_modules/vite/bin/vite.js build",
+    "build:standalone": "VITE_BUILD_STANDALONE=1 node node_modules/vite/bin/vite.js build",
     "preview": "vite preview"
   },
   "dependencies": {
