--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "build": "mkdir -p public && cd ../client && npm ci --include=dev && npm run build && cp -r dist/* ../server/public",
+    "build": "mkdir -p public dist && cd ../client && npm ci --include=dev && npm run build && cp -r dist/* ../server/public && cp -r dist/* ../server/dist",
     "build:server": "npm ci",
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
